--- a/employeeReimbursements.css
+++ b/employeeReimbursements.css
@@ -1,5 +1,10 @@
 .navbar {
     border-bottom: solid black;
+    background-color: rgb(230, 230, 230);
+}
+
+body {
+    background-color: lightgray;
 }
 
 .row {
@@ -25,4 +30,22 @@
 #approveDeny{
     text-align: center;
     margin-top:30%;
+}
+
+#employeeReimbursements {
+    text-align: center;
+    margin-top: 50px;
+}
+
+#get-resolved-reimbursements {
+    margin-bottom: 15px;
+    margin-top: 15px;
+}
+
+#returnedEmployeeReimbursements {
+    margin-top: 20px;
+}
+
+#eReimbursements {
+    margin-top: 20px;
 }
