--- a/managerReimbursement.css
+++ b/managerReimbursement.css
@@ -1,5 +1,10 @@
 .navbar {
     border-bottom: solid black;
+    background-color: rgb(230, 230, 230);
+}
+
+body {
+    background-color: lightgray;
 }
 
 #title {
@@ -26,17 +31,20 @@
 
 #nReimbursements {
     text-align: center;
-    text-decoration: underline;    
+    text-decoration: underline;
+    margin-top: 15px;  
 }
 
 #pReimbursements {
     text-align: center;
     text-decoration: underline;
+    margin-top: 15px;
 }
 
 #rReimbursements {
     text-align: center;
     text-decoration: underline;
+    margin-top: 15px;
 }
 
 #rAmount {
