--- a/reimbursement.css
+++ b/reimbursement.css
@@ -1,5 +1,10 @@
 .navbar {
     border-bottom: solid black;
+    background-color: rgb(230, 230, 230);
+}
+
+body {
+    background-color: lightgray;
 }
 
 #title {
